# telebio

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
data/: chat_categories.json  examples.json  phrases.json  prompts.json
data/prod_models/mix0035/: stage1_catboost.cbm  stage2_nearest_centroid.pkl  val_metrics.json
labeling/: __init__.py  app.py  build_dataset.py  catboost_pipeline.py  compare_catboost_models.py  context_dataset.py  context_export.py  context_relevance_report.py  dataset.py  fill_missing_scores.py  train_catboost.py
labeling/benchmarks/: __init__.py  benchmark_100_messages.py
labeling/cli/: __init__.py  build_dataset.py  compare_catboost_models.py  context_export.py  context_relevance_report.py  fill_missing_scores.py  prepare_dataset.py  train_catboost.py
labeling/core/: __init__.py  catboost_experiments.py  catboost_pipeline.py  context_dataset.py  dataset.py  scoring.py  source_adapters.py
labeling/ui/: __init__.py  app.py  catboost_review.py  merged_groups.py
scripts/: annotate_val_with_mix0035.py  bench_mix0035.py  build_labeling_dataset.py  check_bio_newline.py  classify_chats.py  dry_run_merge.py  fetch_events.py  live_dry_run.py
src/telebio/: __main__.py  config.py  context_exceptions.py  context_prod.py  context_relevance.py  modes.py  prompts.py  scheduler.py  state.py  telegram_context.py
src/telebio/providers/: __init__.py  base.py  context_prod_provider.py  context_provider.py  list_provider.py  llm_provider.py  telegram_context_provider.py
src/telebio/services/: actions.py  bot.py  keyboards.py  state_store.py  telegram.py  texts.py
src/telebio/services/handlers/: __init__.py  callbacks.py  collect.py  collect_context.py  context.py  history.py  menu.py  new.py  pause.py  set_mode.py  start.py  status.py  update_context.py
tests/: conftest.py  test_bot_handlers.py  test_bot_ui.py  test_catboost_experiments.py  test_config.py  test_context_prod_prompt.py  test_context_prod_store.py  test_context_provider.py  test_context_relevance.py  test_labeling_dataset.py  test_list_provider.py  test_llm_provider.py  test_main.py  test_protocol.py  test_scheduler.py  test_state.py  test_state_store.py  test_telegram_context_prompt.py  test_telegram_context_store.py  test_telegram_service.py
tests/fixtures/: context_messages_live.json  context_messages_live_large.json
