[project]
name = "telebio"
version = "0.1.0"
description = "Automatic Telegram bio changer"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "catboost>=1.2.8",
    "cryptg>=0.5.2",
    "httpx>=0.28.1",
    "numpy>=2.2.0",
    "python-dotenv>=1.1.0",
    "sentence-transformers>=4.1.0",
    "telethon>=1.42.0",
    "tgcrypto>=1.2.5",
    "transformers>=4.51.0",
]

[project.scripts]
telebio = "telebio.__main__:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.25",
    "respx>=0.22",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-m 'not smoke'"
markers = [
    "smoke: real API smoke tests (deselected by default, run with: pytest -m smoke)",
]
